[package]
authors = ["ysouyno <ysouyno@163.com>"]
edition = "2018"
name = "error_show"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase", "winnt", "minwindef", "libloaderapi"]}
