[package]
authors = ["ysouyno <ysouyno@163.com>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "Show error code information"
edition = "2018"
keywords = ["errno", "error", "show"]
license = "MIT"
name = "error_show"
readme = "README.md"
repository = "https://github.com/ysouyno/error_show"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
structopt = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase", "winnt", "minwindef", "libloaderapi"]}
